# Projet_LO21

./: CMakeLists.txt  JL.txt  README.md  Test.txt  UML_Piles.txt  UML_final.plantuml  UML_v2.plantuml  UML_v2_Commentaire.plantuml  UML_v2_sans_commentaires.plantuml  UML_v3.plantuml
Anciens fichiers reserve/: reserve.h
Code/: Etablissement.sql  Etablissement_depart.sql  Main.h  MiniVille.depend  TypesEnum.h  buildfonctions.cpp  carte_monument.cpp  carte_monument.h  create_database.cpp  (+22 more)
Code fonctionnel/: Carte_Monument.cpp  Carte_Monument.h  Final.sql  buildfonctions.cpp  buildfonctions.h  create_database.cpp  create_database.h  jeu.cpp  jeu.h  joueur.cpp  joueur.h  main.cpp  miniville.cpp  pile_etablissement.cpp
Demo_SQLite/: CMakeLists.txt  Etablissement.sql  main.cpp  monument.cpp  monument.h  projet.db
IA/: CMakeLists.txt  Carte_Monument.cpp  Carte_Monument.h  MKrandom.h  bot.cpp  bot.h  buildfonctions.cpp  buildfonctions.h  create_database.cpp  create_database.h  etablissement.h  etablissements_speciaux.cpp  jeu.cpp  jeu.h  joueur.cpp  joueur.h  main.cpp  miniville.cpp  miniville.h  monument.cpp  monument.h  partie.cpp  partie.h  partie_with_bot.cpp  partie_with_bot.h  pile_etablissement.cpp  pile_etablissement.h  pioche.cpp  pioche.h  reserve.cpp  reserve.h
QT_Fonctionnel1/: CMakeLists.txt  Etablissement.sql  Etablissement_depart.sql  Monument.sql  all.sql  buildfonctions.cpp  buildfonctions.h  create_database.cpp  jeu.cpp  jeu.h  joueur.cpp  joueur.h  main.cpp  partie.cpp  pile_etablissement.cpp  pile_etablissement.h  pile_monument.cpp  pile_monument.h  reserve.cpp
(+636 files in other folders)
